# GameCreator

./: .gitignore  BUILD_PLAN.md  Project Docs.txt  README.md  build.spec  pyproject.toml  requirements.txt  run.bat  run.ps1
Project docs/: AI Game Asset Factory Development Plan.docx  AI Game Asset Factory Technical Design Document.docx  AI Game Asset Factory UI & Workflow Specification.docx  AI Game Asset Factory.docx  API & Internal Contracts Specification.docx  Acceptance Criteria & Test Plan.docx  Functional Requirements.docx  Risk Register & Architecture Decision Log.docx  System Architecture Specification.docx  Technical Feasibility & Spike Report.docx
app/: main.py
app/exporters/: gif_exporter.py  manifest_exporter.py  png_exporter.py
app/models/: model_manager.py  model_registry.py
app/services/: animation_service.py  background_service.py  classification_service.py  export_service.py  extraction_service.py  generation_service.py  metadata_service.py  project_service.py  style_service.py  texture_service.py
app/storage/: asset_repo.py  database.py  project_repo.py  style_repo.py
app/ui/: animation_screen.py  blocking_overlay.py  dashboard_screen.py  export_screen.py  generation_screen.py  main_window.py  review_screen.py  style_editor_screen.py
app/utils/: config.py  errors.py  image_utils.py  logger.py
app/workflows/: job_queue.py  progress_tracker.py  workflow_engine.py
config/: app_config.json  dark_theme.qss  model_registry.json
tests/: test_config.py  test_errors.py  test_services.py  test_storage.py
